tests/integration/valid/basic_valid.lof
// SHOULD_PASS - Basic valid single use
proof BasicValid {
    input x: field;
    let y = x + 1 in
    let _ = assert y === x + 1 in
    y
}
