tests/integration/invalid/basic_invalid.lof
// SHOULD_FAIL - Double use of linear variable
proof BasicInvalid {
    input x: field;
    let y = x + 1 in
    let z = x + 2 in
    z
}